ajout du cas ou le musée n'éxiste pas
