# services/ratp/api/controllers/stopController.mjs
@@ -3,13 +3,16 @@ import { distanceInKmBetweenEarthCoordinates } from "../helpers/coords.mjs";
 
 const stopController = {
   getAllStopsAroundMuseum: async (museum) => {
-    const stops = stopDao.getByCity(museum.city);
+    const stops = await stopDao.getByCity(museum.city);
+
+    if (!stops) return [];
+
     const nearestStops = stops.filter((stop) => {
       const distance = distanceInKmBetweenEarthCoordinates(
         museum.coordinates,
         stop.coordinates,
       );
-      return distance < 50;
+      return distance < 5;
     });
     return nearestStops;
   },
