# services/ratp/swagger.json
@@ -5,7 +5,7 @@
     "description": "",
     "version": "1.0.0"
   },
-  "host": "localhost:8083/api/proxy_ratp",
+  "host": "localhost:8083/api/ratp",
   "basePath": "/",
   "schemes": [
     "http",
@@ -18,6 +18,72 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/stops": {
+      "post": {
+        "tags": [
+          "Stop"
+        ],
+        "description": "Endpoint to get all stops near to a museum",
+        "parameters": [
+          {
+            "name": "museum",
+            "in": "body",
+            "description": "Museum object",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "museofile": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "name": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "coordinates": {
+                  "type": "object",
+                  "properties": {
+                    "longitude": {
+                      "type": "string",
+                      "example": "number"
+                    },
+                    "latitude": {
+                      "type": "string",
+                      "example": "number"
+                    }
+                  }
+                },
+                "department": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "address": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "url": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "city": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
